package ub.edu.model.Transport;

public class Cotxe extends Transport{
    public Cotxe(String id, float velocitat) {
        super(id,velocitat);
    }

    public String toString(){
        return "Cotxe";
    }
}
