@startuml

title __TRANSPORT's Class Diagram__\n

  namespace ub.edu.model {
    namespace Transport {
      class ub.edu.model.Transport.APeu {
          + APeu()
          + toString()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Transport {
      class ub.edu.model.Transport.Bici {
          + Bici()
          + toString()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Transport {
      class ub.edu.model.Transport.Cotxe {
          + Cotxe()
          + toString()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Transport {
      class ub.edu.model.Transport.Transport {
          - id : String
          - tipusTransports : String[]
          - velocitat : float
          + Transport()
          + getId()
          + getTipusTransport()
          + getVelocitat()
          + setId()
          + setVelocitat()
      }
    }
  }
  

  ub.edu.model.Transport.APeu -up-|> ub.edu.model.Transport.Transport
  ub.edu.model.Transport.Bici -up-|> ub.edu.model.Transport.Transport
  ub.edu.model.Transport.Cotxe -up-|> ub.edu.model.Transport.Transport


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
